# block-explorer

./: Cargo.toml  LICENSE  README.md  Rocket.toml
public/: main.css
src/: address.rs  block.rs  blockchain.rs  blockstats.rs  main.rs  network.rs  routes.rs  rpc_client.rs  transaction.rs  utils.rs
templates/: 404.html.tera  500.html.tera  about.html.tera  address.html.tera  base.html.tera  block.html.tera  index.html.tera  transaction.html.tera
