[package]
name = "block-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "0.5.0", features = ["json", "tls"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
